--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="header-container">
+        <div class="logo-container">
+            <img src="/imagenes/logoEA.png" alt="EasyAccess Logo" class="header-logo">
+        </div>
         <h1 class="header-title">Descarga EasyAccess para Android</h1>
         <p class="header-subtext">La mejor solución para el control de accesos con códigos QR.</p>
         <p class="header-description">
